@startuml

title __SCENEHANDLING's Class Diagram__\n

  package graphicalUserInterface {
    package graphicalUserInterface.sceneHandling {
      class SceneData {
          - available : ArrayList<String>
          - missing : ArrayList<String>
          - checklist : ArrayList<String>
          - banList : ArrayList<String>
          - collected : ArrayList<Card>
          - uncollected : ArrayList<Card>
          - collectedSetID : String
          ~ SceneData()
          + getAvailable()
          + getMissing()
          + getChecklist()
          + getBanList()
          + getDeck()
          + getCollected()
          + getUncollected()
          + getCollectedSetID()
          + getTmpProfSettings()
          + getCardSuggestor()
          + getAlbum()
          + setAvailable()
          + setMissing()
          + setChecklist()
          + setBanList()
          + setDeck()
          + setCollected()
          + setUncollected()
          + setCollectedSetID()
          + setTmpProfSettings()
          + setCardSuggestor()
          + setAlbum()
      }
    }
  }
  

  package graphicalUserInterface {
    package graphicalUserInterface.sceneHandling {
      class Scenes {
          - width : double
          - height : double
          - scene : Scene
          - root : Parent
          + getDataCache()
          + beginningScene()
          + deckImportView()
          + checklistScene()
          + forbiddenScene()
          + deckAnalyzerScene()
          + profileSettingScene()
          + defaultScene()
          + deckBuidler()
          + demo()
          + albumBuilder()
          + albumAnalysis()
          + viewSetCollected()
          + settings()
      }
    }
  }
  

  SceneData o-- Deck : deck
  SceneData o-- ProfileSettings : tmpProfSettings
  SceneData o-- DeckBuilder : cardSuggestor
  SceneData o-- Album : album
  Scenes o-- SceneData : dataCache


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
